@@ -5,6 +5,7 @@
 package org.hibernate.orm.test.mapping.converted.converter;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import jakarta.persistence.AttributeConverter;
 import jakarta.persistence.Convert;
@@ -12,33 +13,31 @@ import jakarta.persistence.Converter;
 import jakarta.persistence.Entity;
 import jakarta.persistence.Id;
 
-import org.hibernate.Session;
+import org.hibernate.testing.orm.junit.DomainModel;
+import org.hibernate.testing.orm.junit.SessionFactory;
+import org.hibernate.testing.orm.junit.SessionFactoryScope;
 import org.hibernate.type.descriptor.converter.spi.JpaAttributeConverter;
 import org.hibernate.persister.entity.EntityPersister;
 import org.hibernate.type.Type;
 import org.hibernate.type.internal.ConvertedBasicTypeImpl;
 
-import org.hibernate.testing.junit4.BaseNonConfigCoreFunctionalTestCase;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-import static org.hibernate.testing.junit4.ExtraAssertions.assertTyping;
-import static org.junit.Assert.assertTrue;
+import static org.hibernate.testing.orm.junit.ExtraAssertions.assertTyping;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  * test handling of an AttributeConverter explicitly named via a @Convert annotation
  *
  * @author Steve Ebersole
  */
-public class SimpleConvertAnnotationTest extends BaseNonConfigCoreFunctionalTestCase {
-
-	@Override
-	protected Class[] getAnnotatedClasses() {
-		return new Class[] { Entity1.class, UrlConverter.class, AutoUrlConverter.class };
-	}
+@DomainModel(annotatedClasses = {SimpleConvertAnnotationTest.Entity1.class, SimpleConvertAnnotationTest.UrlConverter.class, SimpleConvertAnnotationTest.AutoUrlConverter.class})
+@SessionFactory
+public class SimpleConvertAnnotationTest {
 
 	@Test
-	public void testSimpleConvertUsage() throws MalformedURLException {
-		final EntityPersister ep = sessionFactory().getMappingMetamodel().getEntityDescriptor(Entity1.class.getName());
+	public void testSimpleConvertUsage(SessionFactoryScope scope) {
+		final EntityPersister ep = scope.getSessionFactory().getMappingMetamodel().getEntityDescriptor(Entity1.class.getName());
 		final Type websitePropertyType = ep.getPropertyType( "website" );
 		final ConvertedBasicTypeImpl type = assertTyping(
 				ConvertedBasicTypeImpl.class,
@@ -49,19 +48,18 @@ public class SimpleConvertAnnotationTest extends BaseNonConfigCoreFunctionalTest
 
 		resetFlags();
 
-		Session session = openSession();
-		session.getTransaction().begin();
-		session.persist( new Entity1( 1, "1", new URL( "http://hibernate.org" ) ) );
-		session.getTransaction().commit();
-		session.close();
+		scope.inTransaction( session -> {
+			try {
+				session.persist( new Entity1(1, "1", URI.create("http://hibernate.org" ).toURL()) );
+			}
+			catch (MalformedURLException e) {
+				// Ignore
+			}
+		} );
 
 		assertTrue( convertToDatabaseColumnCalled );
 
-		session = openSession();
-		session.getTransaction().begin();
-		session.createQuery( "delete Entity1" ).executeUpdate();
-		session.getTransaction().commit();
-		session.close();
+		scope.dropData();
 	}
 
 	static boolean convertToDatabaseColumnCalled = false;
